readded overflow hidden due to scroll bug

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,6 +9,7 @@
 body {
   background-color: rgb(243, 243, 243);
   width: 100%;
+  overflow: hidden;
   position: relative;
 }
 
